# lab08

./: CMakeLists.txt  Dockerfile
.github/workflows/: docker.yml
include/: fib.hpp
logs/: log.txt
sources/: fib.cpp
tests/: test.cpp
